fixed disqus spacing + anchor tag colors

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -199,6 +199,10 @@ article {
 	img {
 		width: 100%;
 	}
+
+	a {
+		color: $accent-color;
+	}
 }
 
 // pagination
